--- a/public_html/html/index.html
+++ b/public_html/html/index.html
@@ -30,9 +30,9 @@
         <link rel="shortcut icon" href="/images/favicon.ico">
         <link rel="apple-touch-icon-precomposed" href="/images/retina-favicon.png">
 
-        <link rel="stylesheet" id="login-with-ajax-css" href="widget.css" type="text/css" media="all">
-        <link rel="stylesheet" id="bbp-default-css" href="bbpress.css" type="text/css" media="screen">
-        <link rel="stylesheet" id="contact-form-7-css" href="styles.css" type="text/css" media="all">
+        <!--<link rel="stylesheet" id="login-with-ajax-css" href="widget.css" type="text/css" media="all">-->
+        <!--<link rel="stylesheet" id="bbp-default-css" href="bbpress.css" type="text/css" media="screen">-->
+<!--        <link rel="stylesheet" id="contact-form-7-css" href="styles.css" type="text/css" media="all">-->
         <link rel="stylesheet" id="fave-bootstrap.min-css" href="bootstrap.css" type="text/css" media="all">
         <link rel="stylesheet" id="fave-bootstrap-theme.min-css" href="bootstrap-theme.css" type="text/css" media="all">
         <link rel="stylesheet" id="fave-font-awesome.min-css" href="font-awesome.css" type="text/css" media="all">
